@@ -1,4 +1,15 @@
 package TestCase::Concat {
+    sub concat_bytes : int () {
+    
+    my $string = (byte[])"abc" . (byte[])"def";
+    
+    if ($string eq "abcdef") {
+      return 1;
+    }
+    
+    return 0;
+  }
+
   sub concat_string : int () {
     
     my $string = "abc" . "def";
